--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
         <input class="form-control-lg mr-sm-2 message--input" id="message-input" type="text" placeholder="Message">
       </form>
         <button class="btn btn-outline-success btn-lg  mx-4 my-2 my-sm-0" type="submit" id="send">Send</button>
+        <button type="button" id="gif-button" class="btn btn-outline-primary btn-lg mx-4 my-2 my-sm-0" data-toggle="modal" data-target="#gifModal">GIF</button>
         <button class="btn btn-outline-danger btn-lg mx-3 my-2 my-sm-0" type="submit" id="clear-button">Clear</button>
     </nav>
   </div>
@@ -36,5 +37,26 @@
       </div>
     </div>
   </div>
+  
+  <!-- Modal -->
+<div class="modal fade" id="gifModal" tabindex="-1" aria-labelledby="gif-modal-label" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="gif-modal-label">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 </body>
 </html>
