--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chatty</title>
+  <title>SnoopyChat</title>
 </head>
 <body>
   <div id="navbar" class="d-block">
